fix issue of overflow in feedback column

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,10 @@ h4 {
     font-size: 150%;
 }
 
+#feedback-column {
+    overflow: auto;
+}
+
 #dict-link {
     color: #353535;
 }
